<?xml version="1.0"?>
<package format="2">
  <name>project_localization</name>
  <version>0.0.0</version>
  <description>Localization using AMCL particle filter</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  
  <export>
  </export>
</package>